# Quasi-One-Dimensional-DeLaval-Nozzle

./: CMakeLists.txt  README.md
.cache/clangd/index/: control.cpp.840E45BC53E5E755.idx  control.h.0A13D53A44BEC6ED.idx  discretization.cpp.7FE6A93B75714FEC.idx  discretization.h.853B684B7BA8820C.idx  initialize.cpp.C2A35E8317E69F17.idx  initialize.h.748488C05AF59CF8.idx  main.cpp.3AEEF5B0B142F913.idx
include/: MacCormack.h  control.h  discretization.h  initialize.h
source/: control.cpp  discretization.cpp  initialize.cpp  main.cpp
